@@ -1364,6 +1364,7 @@ public class Main implements ProblemSeverities, SuffixConstants {
 	private List<String> addonExports = Collections.EMPTY_LIST;
 	private List<String> addonReads = Collections.EMPTY_LIST;
 	public Set<String> rootModules = Collections.EMPTY_SET;
+	public Set<String> limitedModules;
 
 	public Locale compilerLocale;
 	public CompilerOptions compilerOptions; // read-only
@@ -1378,6 +1379,7 @@ public class Main implements ProblemSeverities, SuffixConstants {
 	// == Main.NONE: absorbent element, do not output class files;
 	// else: use as the path of the directory into which class files must
 	//       be written.
+	protected String releaseVersion;
 	private boolean didSpecifySource;
 	private boolean didSpecifyTarget;
 	public String[] encodings;
@@ -1403,7 +1405,7 @@ public class Main implements ProblemSeverities, SuffixConstants {
 	public Logger logger;
 	public int maxProblems;
 	public Map<String, String> options;
-	long complianceLevel;
+	protected long complianceLevel;
 	public char[][] ignoreOptionalProblemsFromFolders;
 	protected PrintWriter out;
 	public boolean proceed = true;
@@ -1841,6 +1843,8 @@ public void configure(String[] argv) {
 	final int INSIDE_SYSTEM = 27;
 	final int INSIDE_PROCESSOR_MODULE_PATH_start = 28;
 	final int INSIDE_ADD_MODULES = 29;
+	final int INSIDE_RELEASE = 30;
+	final int INSIDE_LIMIT_MODULES = 31;
 
 	final int DEFAULT = 0;
 	ArrayList<String> bootclasspaths = new ArrayList<>(DEFAULT_SIZE_CLASSPATH);
@@ -2076,6 +2080,10 @@ public void configure(String[] argv) {
 					mode = INSIDE_MAX_PROBLEMS;
 					continue;
 				}
+				if (currentArg.equals("--release")) { //$NON-NLS-1$
+					mode = INSIDE_RELEASE;
+					continue;
+				}
 				if (currentArg.equals("-source")) { //$NON-NLS-1$
 					mode = INSIDE_SOURCE;
 					continue;
@@ -2212,6 +2220,10 @@ public void configure(String[] argv) {
 				}
 				if (currentArg.equals("--add-modules")) { //$NON-NLS-1$
 					mode = INSIDE_ADD_MODULES;
+					continue;
+				}
+				if (currentArg.equals("--limit-modules")) { //$NON-NLS-1$
+					mode = INSIDE_LIMIT_MODULES;
 					continue;
 				}
 				if (currentArg.equals("-sourcepath")) {//$NON-NLS-1$
@@ -2665,6 +2677,10 @@ public void configure(String[] argv) {
 					throw new IllegalArgumentException(
 						this.bind("configure.duplicateTarget", currentArg));//$NON-NLS-1$
 				}
+				if (this.releaseVersion != null) {
+					throw new IllegalArgumentException(
+							this.bind("configure.unsupportedWithRelease", "-target"));//$NON-NLS-1$ //$NON-NLS-2$
+				}
 				this.didSpecifyTarget = true;
 				if (currentArg.equals("1.1")) { //$NON-NLS-1$
 					this.options.put(CompilerOptions.OPTION_TargetPlatform, CompilerOptions.VERSION_1_1);
@@ -2722,10 +2738,37 @@ public void configure(String[] argv) {
 				}
 				mode = DEFAULT;
 				continue;
+			case INSIDE_RELEASE:
+				// If release is < 9, the following are diasllowed:
+				// bootclasspath, -Xbootclasspath, -Xbootclasspath/a:, -Xbootclasspath/p:, 
+				// -endorseddirs, -Djava.endorsed.dirs, -extdirs, -Djava.ext.dirs
+
+				// If release >= 9, the following are disallowed
+				// --system and --upgrade-module-path
+
+				// -source and -target are diasllowed for any --release
+				this.releaseVersion = currentArg;
+				long releaseToJDKLevel = CompilerOptions.releaseToJDKLevel(currentArg);
+				if (releaseToJDKLevel == 0) {
+					throw new IllegalArgumentException(
+							this.bind("configure.unsupportedReleaseVersion", currentArg)); //$NON-NLS-1$
+				}
+				// Let's treat it as regular compliance mode
+				this.complianceLevel = releaseToJDKLevel;
+				String versionAsString = CompilerOptions.versionFromJdkLevel(releaseToJDKLevel);
+				this.options.put(CompilerOptions.OPTION_Compliance, versionAsString);
+				this.options.put(CompilerOptions.OPTION_Source, versionAsString);
+				this.options.put(CompilerOptions.OPTION_TargetPlatform, versionAsString);
+				mode = DEFAULT;
+				continue;
 			case INSIDE_SOURCE :
 				if (this.didSpecifySource) {
 					throw new IllegalArgumentException(
 						this.bind("configure.duplicateSource", currentArg));//$NON-NLS-1$
+				}
+				if (this.releaseVersion != null) {
+					throw new IllegalArgumentException(
+							this.bind("configure.unsupportedWithRelease", "-source"));//$NON-NLS-1$ //$NON-NLS-2$
 				}
 				this.didSpecifySource = true;
 				if (currentArg.equals("1.3")) { //$NON-NLS-1$
@@ -2819,6 +2862,16 @@ public void configure(String[] argv) {
 				StringTokenizer tokenizer = new StringTokenizer(currentArg, ","); //$NON-NLS-1$
 				while (tokenizer.hasMoreTokens()) {
 					this.rootModules.add(tokenizer.nextToken().trim());
+				}
+				continue;
+			case INSIDE_LIMIT_MODULES:
+				mode = DEFAULT;
+				tokenizer = new StringTokenizer(currentArg, ","); //$NON-NLS-1$
+				while (tokenizer.hasMoreTokens()) {
+					if (this.limitedModules == null) {
+						this.limitedModules = new HashSet<>();
+					}
+					this.limitedModules.add(tokenizer.nextToken().trim());
 				}
 				continue;
 			case INSIDE_CLASSPATH_start:
@@ -3391,7 +3444,8 @@ public File getJavaHome() {
 
 public FileSystem getLibraryAccess() {
 	FileSystem nameEnvironment = new FileSystem(this.checkedClasspaths, this.filenames, 
-					this.annotationsFromClasspath && CompilerOptions.ENABLED.equals(this.options.get(CompilerOptions.OPTION_AnnotationBasedNullAnalysis)));
+					this.annotationsFromClasspath && CompilerOptions.ENABLED.equals(this.options.get(CompilerOptions.OPTION_AnnotationBasedNullAnalysis)),
+					this.limitedModules);
 	nameEnvironment.module = this.module;
 	processAddonModuleOptions(nameEnvironment);
 	return nameEnvironment;
@@ -4668,6 +4722,14 @@ private void initRootModules(LookupEnvironment environment, FileSystem fileSyste
 			map.put(qName, m);
 		}
 	}
+	if (this.limitedModules != null) {
+		for (String m : this.limitedModules) {
+			ModuleBinding mod = environment.getModule(m.toCharArray());
+			if (mod == null) {
+				throw new IllegalArgumentException(this.bind("configure.invalidModuleName", m)); //$NON-NLS-1$
+			}
+		}
+	}
 }
 private ReferenceBinding[] processClassNames(LookupEnvironment environment) {
 	// check for .class file presence in case of apt processing
@@ -5087,20 +5149,18 @@ protected void setPaths(ArrayList<String> bootclasspaths,
 		String version = this.options.get(CompilerOptions.OPTION_Compliance);
 		this.complianceLevel = CompilerOptions.versionToJdkLevel(version);
 	}
-
-	if (this.complianceLevel > ClassFileConstants.JDK1_8) {
-		if (bootclasspaths != null && bootclasspaths.size() > 0)
-			throw new IllegalArgumentException(
-				this.bind("configure.unsupportedOption", "-bootclasspath")); //$NON-NLS-1$ //$NON-NLS-2$
-		if (extdirsClasspaths != null && extdirsClasspaths.size() > 0)
-			throw new IllegalArgumentException(
-				this.bind("configure.unsupportedOption", "-extdirs")); //$NON-NLS-1$ //$NON-NLS-2$
-		if (endorsedDirClasspaths != null && endorsedDirClasspaths.size() > 0)
-			throw new IllegalArgumentException(
-				this.bind("configure.unsupportedOption", "-endorseddirs")); //$NON-NLS-1$ //$NON-NLS-2$
-	}
 	// process bootclasspath, classpath and sourcepaths
- 	ArrayList<Classpath> allPaths = handleBootclasspath(bootclasspaths, customEncoding);
+	ArrayList<Classpath> allPaths = null;
+	long jdkLevel = validateClasspathOptions(bootclasspaths, endorsedDirClasspaths, extdirsClasspaths);
+
+	if (this.releaseVersion != null && this.complianceLevel < jdkLevel) {
+		// TODO: Revisit for access rules
+		allPaths = new ArrayList<Classpath>();
+		allPaths.add(
+				FileSystem.getOlderSystemRelease(this.javaHomeCache.getAbsolutePath(), this.releaseVersion, null));
+	} else {
+		allPaths = handleBootclasspath(bootclasspaths, customEncoding);
+	}
 
 	List<FileSystem.Classpath> cp = handleClasspath(classpaths, customEncoding);
 
@@ -5164,9 +5224,32 @@ protected final static boolean shouldIgnoreOptionalProblems(char[][] folderNames
 	}
 	return false;
 }
+protected long validateClasspathOptions(ArrayList<String> bootclasspaths, ArrayList<String> endorsedDirClasspaths, ArrayList<String> extdirsClasspaths) {
+	if (this.complianceLevel > ClassFileConstants.JDK1_8) {
+		if (bootclasspaths != null && bootclasspaths.size() > 0)
+			throw new IllegalArgumentException(
+				this.bind("configure.unsupportedOption", "-bootclasspath")); //$NON-NLS-1$ //$NON-NLS-2$
+		if (extdirsClasspaths != null && extdirsClasspaths.size() > 0)
+			throw new IllegalArgumentException(
+				this.bind("configure.unsupportedOption", "-extdirs")); //$NON-NLS-1$ //$NON-NLS-2$
+		if (endorsedDirClasspaths != null && endorsedDirClasspaths.size() > 0)
+			throw new IllegalArgumentException(
+				this.bind("configure.unsupportedOption", "-endorseddirs")); //$NON-NLS-1$ //$NON-NLS-2$
+	}
+	long jdkLevel = Util.getJDKLevel(getJavaHome());
+	if (jdkLevel < ClassFileConstants.JDK9 && this.releaseVersion != null) {
+		throw new IllegalArgumentException(
+				this.bind("configure.unsupportedReleaseOption")); //$NON-NLS-1$
+	}
+	return jdkLevel;
+}
 protected void validateOptions(boolean didSpecifyCompliance) {
 	if (didSpecifyCompliance) {
-		Object version = this.options.get(CompilerOptions.OPTION_Compliance);
+		String version = this.options.get(CompilerOptions.OPTION_Compliance);
+		if (this.releaseVersion != null) {
+			throw new IllegalArgumentException(
+					this.bind("configure.unsupportedWithRelease", version));//$NON-NLS-1$
+		}
 		if (CompilerOptions.VERSION_1_3.equals(version)) {
 			if (!this.didSpecifySource) this.options.put(CompilerOptions.OPTION_Source, CompilerOptions.VERSION_1_3);
 			if (!this.didSpecifyTarget) this.options.put(CompilerOptions.OPTION_TargetPlatform, CompilerOptions.VERSION_1_1);
